@@ -92,21 +92,13 @@ setMethodS3("getTags", "AromaMicroarrayDataSetTuple", function(this, collapse=NU
   tags[tags == "*"] <- getAsteriskTags(this, collapse=",");
 
   # Remove empty tags
-  tags <- tags[nchar(tags) > 0];
+  tags <- Arguments$getTags(tags, collapse=NULL);
 
   # Remove duplicated tags 
   tags <- locallyUnique(tags);
 
   # Collapsed or split?
-  if (!is.null(collapse)) {
-    tags <- paste(tags, collapse=collapse);
-  } else {
-    if (length(tags) > 0)
-      tags <- unlist(strsplit(tags, split=","));
-  }
-
-  if (length(tags) == 0)
-    tags <- NULL;
+  tags <- Arguments$getTags(tags, collapse=collapse);
 
   tags;
 })
